<resources>
    <string name="app_name">AnimeCalender</string>
    <string name="title_activity_main">Anime Calender</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Edit</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_close">Close</string>
    <string name="action_calender">Anime Calender</string>
    <string name="anime_season_list_title">Currently airing anime</string>
    <string name="title_activity_anime_detail">AnimeDetailActivity</string>
    <string name="anime_detail_description_title">Description</string>
    <string name="anime_detail_genre_title">Gerne</string>
    <string name="anime_detail_character_title">Characters</string>
    <string name="title_activity_anime_list">AnimeListActivity</string>
    <string name="anime_list_title">Anime list</string>
    <string name="action_list">Anime List</string>
    <string name="action_list_search">Search</string>
    <string name="anime_list_activity_title">Anime list</string>
    <string name="anime_main_activity_title">Seasonal anime</string>
    <string name="anime_detail_activity_title">Anime detail screen</string>
    <string name="anime_list_search_hint">Search...</string>
    <string name="anime_list_title_found">Found anime:</string>
    <string name="anime_list_title_not_found">No anime found.</string>
    <string name="anime_detail_tag_title">Tags</string>
    <string name="anime_season_search_year_title">Year</string>
    <string name="anime_season_search_season_title">Season</string>
    <string name="anime_season_search_title">Load season data.</string>
    <string name="anime_season_search_button">Load anime</string>
    <string name="anime_season_search_no_found">No anime found.</string>
    <string name="anime_season_search_found">Found anime</string>
    <array name="anime_season_search_seasons">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </array>
</resources>
